# chatterbot-cinema-frances

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
chatterbot_cinema_frances/: constantes.py  database.py  inicializar_nltk.py  processamento_sinopses.py  robo.py  robo_api.py  treinamento_robo.py  web_api.py
chatterbot_cinema_frances/dados_treinamento/: comprimentos.yaml  conversas.yaml  saudacoes.json  solicitacoes_roteiro.json
chatterbot_cinema_frances/interface_chat/: chat.py
chatterbot_cinema_frances/interface_chat/static/: app.css  app.js
chatterbot_cinema_frances/interface_chat/static/sinopses_filmes/: 10.yaml  11.yaml  14.yaml  16.yaml  17.yaml  18.yaml  19.yaml  20.yaml  21.yaml  22.yaml  23.yaml  26.yaml  27.yaml  29.yaml  3.yaml  30.yaml  32.yaml  37.yaml  39.yaml  40.yaml  41.yaml  45.yaml  46.yaml  49.yaml  5.yaml  51.yaml  6.yaml  7.yaml  9.yaml
chatterbot_cinema_frances/interface_chat/templates/: index.html
chatterbot_cinema_frances/sinopses_filmes/: 1.yaml  12.yaml  13.yaml  15.yaml  2.yaml  24.yaml  25.yaml  28.yaml  31.yaml  33.yaml  34.yaml  35.yaml  36.yaml  38.yaml  4.yaml  42.yaml  43.yaml  44.yaml  47.yaml  48.yaml  50.yaml  8.yaml
