[project]
name = "chatterbot-cinema-frances"
version = "0.1.0"
description = ""
authors = [
    {name = "Luiz Eduardo Amorim",email = "20242DWEB0004@ifba.edu.br"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    # poetry run pip3 install chatterbot # Chatterbot precisa ser instalado com PIP
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
